force-app/main/default/objects/CPR_Field_Offset__mdt/CPR_Field_Offset__mdt.object-meta.xml
<CustomObject>
    <label>CPR Field Offset</label>
    <pluralLabel>CPR Field Offsets</pluralLabel>
</CustomObject>