force-app/main/default/objects/CPR_Field_Offset__mdt/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <label>Event Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P02</fullName>
                <default>true</default>
                <label>P02</label>
            </value>
            <value>
                <fullName>P03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>