force-app/main/default/objects/CPR_Field_Offset__mdt/fields/Field_API__c.field-meta.xml
<CustomField>
    <fullName>Field_API__c</fullName>
    <description>E.g., New_MailingStreet__c, New_LastName__c</description>
    <label>Field API</label>
    <length>80</length>
    <type>Text</type>
</CustomField>