force-app/main/default/objects/CPR_Field_Offset__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>090</fullName>
                <default>true</default>
                <label>090</label>
            </value>
            <value>
                <fullName>091</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>