force-app/main/default/objects/CPR_Field_Offset__mdt/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <label>Start</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>